fix scroll 6.0. success. add 'body overflow visible'"

--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -586,6 +586,10 @@ nav ul li:nth-child(5) a {
     color: #ffffff;
   }
 }
+body {
+  overflow: visible !important;
+}
+
 main {
   margin: 0 auto;
 }
