--- a/css/style_menu.css
+++ b/css/style_menu.css
@@ -913,6 +913,10 @@ nav ul li:nth-child(4) a {
     height: 28px;
   }
 }
+body {
+  overflow: visible !important;
+}
+
 footer {
   background: #14274A;
   width: 100%;
