--- a/scss_contact/_main.scss
+++ b/scss_contact/_main.scss
@@ -1,3 +1,7 @@
+body{
+	overflow: visible !important;
+}
+
 main{
 	@extend %max;
 	margin: 0 auto;
